--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav {
 
   background:
     linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)),
-    url("assets/hero.jpg");
+    url("assets/logo.jpeg");
 
   background-size: cover;
   background-position: center;
